...
                    android:layout_marginTop="8dp"
                    android:text="@string/mi_bag_list_heading_3"
                    app:layout_constraintStart_toEndOf="@+id/amountHeader"
                    app:layout_constraintTop_toBottomOf="@+id/bagTitle" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/bagList"
                    android:layout_width="395dp"
                    android:layout_height="129dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amountHeader" />

                <Button
                    android:id="@+id/bag_fragment"
                    android:name="capstonegroup2.dataapp.MedicalInput$bagFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
...
                    android:layout_marginTop="8dp"
                    android:text="@string/mi_urine_times_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/urineTitle" />

                <EditText
                    android:id="@+id/urine_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/mi_urineTimes_hint"
...
                        android:layout_weight="1"
                        android:onClick="radioButtClicked"
                        android:baselineAligned="false"
                        android:text="@string/mi_urine_colour_option_2" />

                    <RadioButton
                        android:id="@+id/urineOptThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="radioButtClicked"
                        android:text="@string/mi_urine_colour_option_3" />

...
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:onClick="radioButtClicked"
                        android:text="@string/mi_wellB_option_2" />

                    <RadioButton
                        android:id="@+id/wellBOptThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="radioButtClicked"
                        android:text="@string/mi_wellB_option_3" />

                </RadioGroup>
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/submit_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitForm"
                android:text="@string/mi_submit_butt"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="460dp" />
...
