...
        android:text="@string/mi_bag_list_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bagListAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
...
